--- a/debian/control.in
+++ b/debian/control.in
@@ -2,7 +2,7 @@ Source: snoopy
 Section: admin
 Priority: optional
 Maintainer: Marc Haber <mh+debian-packages@zugschlus.de>
-Build-Depends: cdbs (>= 0.4.23-1.1), debhelper (>= 4.1.0)
+Build-Depends: @cdbs@
 Standards-Version: 3.6.1
 
 Package: snoopy
