--- a/debian/config
+++ b/debian/config
@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/sh -e
 
 . /usr/share/debconf/confmodule
 
@@ -11,5 +11,5 @@ LIBNAME="/lib/snoopy.so"
 
 test -f $PRELOAD && grep "^$LIBNAME" $PRELOAD && exit 0
 
-db_input critical snoopy/install-ld-preload
+db_input critical snoopy/install-ld-preload || true
 db_go
