--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,12 @@ Source: snoopy
 Section: admin
 Priority: optional
 Maintainer: Marc Haber <mh+debian-packages@zugschlus.de>
-Build-Depends: debhelper (>= 4.1.0), dpatch, cdbs (>= 0.4.29)
+Build-Depends: debhelper (>= 7)
 Standards-Version: 3.7.2
 
 Package: snoopy
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ld.so.preload-manager (>= 0.1)
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: An execve() wrapper and logger
  snoopy is merely a shared library that is used as a wrapper
  to the execve() function provided by libc as to log every call
