--- a/debian/rules
+++ b/debian/rules
@@ -1,18 +1,11 @@
 #!/usr/bin/make -f
+%:
+	dh $@
 
-# to re-generate debian/control, invoke
-# fakeroot debian/rules debian/control DEB_AUTO_UPDATE_DEBIAN_CONTROL:=yes
-# currently, the generated Build-Depends: line needs manual tweaking,
-# see #322401
+override_dh_auto_configure:
+	autoconf
+	dh_auto_configure -- --libdir=/lib
 
-# automatic debian/control generation disabled, cdbs bug #311724.
-
-DEB_MAKE_INSTALL_TARGET  := install DESTDIR=$(CURDIR)/debian/tmp
-
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/makefile.mk
-include /usr/share/cdbs/1/rules/dpatch.mk
-
-# this is temporarily needed because of a cdbs issue
-unpatch: deapply-dpatches
- 
+override_dh_clean:
+	dh_clean
+	rm -f configure
