Build-Depends: autoconf

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: snoopy
 Section: admin
 Priority: optional
 Maintainer: Zed Pobre <zed@debian.org>
-Build-Depends: debhelper (>= 8)
+Build-Depends: debhelper (>= 8), autoconf
 Standards-Version: 3.7.2
 Homepage: http://sourceforge.net/projects/snoopylogger/
 Vcs-Git: git://anonscm.debian.org/collab-maint/snoopy.git
