--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: snoopy
 Section: admin
 Priority: optional
 Maintainer: Zed Pobre <zed@debian.org>
-Build-Depends: debhelper (>= 9), autoconf
+Build-Depends: debhelper (>= 9), dpkg-dev (>= 1.16.1), autoconf
 Standards-Version: 3.9.6
 Homepage: http://sourceforge.net/projects/snoopylogger/
 Vcs-Git: git://anonscm.debian.org/collab-maint/snoopy.git
