--- a/etc/snoopy.ini
+++ b/etc/snoopy.ini
@@ -3,6 +3,7 @@
 [snoopy]
 
 
+
 ;;; Log Message Format specification
 ;
 ; May consist of:
@@ -14,7 +15,10 @@
 ; Default value:
 ;   "[uid:%{uid} sid:%{sid} tty:%{tty} cwd:%{cwd} filename:%{filename}]: %{cmdline}"
 ;
-message_format = "[uid:%{uid} sid:%{sid} tty:%{tty} cwd:%{cwd} filename:%{filename}]: %{cmdline}"
+; Example:
+;message_format = "useless static log entry that gets logged on every program execution"
+;message_format = "[uid:%{uid} sid:%{sid} tty:%{tty} cwd:%{cwd} filename:%{filename}]: %{cmdline}"
+
 
 
 ;;; Filter Chain specification
@@ -49,7 +53,12 @@ message_format = "[uid:%{uid} sid:%{sid} tty:%{tty} cwd:%{cwd} filename:%{filena
 ; Default value:
 ;   "" (empty string)
 ;
-filter_chain = ""
+; Examples:
+;filter_chain = ""
+;filter_chain = "only_uid:0"
+;filter_chain = "only_uid:10000"
+;filter_chain = "exclude_uid:0"
+
 
 
 ;;; Error Logging
@@ -62,6 +71,37 @@ filter_chain = ""
 ; - you are trying to configure message format and are having problems with it
 ;
 ; Default value:
-;   no
+;   no (unless changed by ./configure --enable-error-logging to yes)
 ;
-error_logging = no
+; Example:
+;error_logging = yes
+
+
+
+;;; Syslog Facility
+;
+; What syslog facility to use. Can be prefixed with 'LOG_'.
+;
+; Possible values:
+;   One of AUTH|AUTHPRIV|CRON|DAEMON|FTP|KERN|LOCAL[0-7]|LPR|MAIL|NEWS|SYSLOG|USER|UUCP
+;
+; Default value:
+;   LOG_AUTHPRIV (unless changed by ./configure --with-syslog-facility=FACILITY)
+;
+; Example:
+;syslog_facility = LOG_AUTHPRIV
+
+
+
+;;; Syslog Level
+;
+; What syslog level to use. Can be prefixed with 'LOG_'.
+;
+; Possible values:
+;   One of EMERG|ALERT|CRIT|ERR|WARNING|NOTICE|INFO|DEBUG
+;
+; Default value:
+;   LOG_INFO (unless changed by ./configure --with-syslog-level=LEVEL)
+;
+; Example:
+;syslog_level = LOG_INFO
