--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Zed Pobre <zed@debian.org>
 Build-Depends: debhelper (>= 9), dpkg-dev (>= 1.16.1), autoconf
 Standards-Version: 3.9.6
-Homepage: http://sourceforge.net/projects/snoopylogger/
+Homepage: https://github.com/a2o/snoopy/
 Vcs-Git: https://github.com/a2o/snoopy.git
 Vcs-Browser: https://github.com/a2o/snoopy
 
